--- a/resources/views/forgot-password/ask-email.edge
+++ b/resources/views/forgot-password/ask-email.edge
@@ -16,6 +16,6 @@
         placeholder: "Enter your email..."
     })
     <br>
-    <button class="button is-primary is-fullwidth" type="submit">Send Activation Code</button>
+    <button class="button is-primary is-fullwidth" type="submit">Send Code</button>
 </form>
 @end
